remove guava dependency